# rust-arduino-blink-led-no-core-with-cargo

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  avr-atmega328p-new.json  avr-atmega328p.json  initialize_memory.S  interrupt_vector.S  linker-script  rust-toolchain
.cargo/: config
arduino/: Cargo.toml
arduino/src/: lib.rs  prelude.rs  serial.rs  timer0.rs  timer1.rs
avr-core/: Cargo.toml
avr-core/src/: clone.rs  cmp.rs  intrinsics.rs  lib.rs  marker.rs  ops.rs  option.rs
blink/: Cargo.toml  Makefile  arduino.json  avr-atmega328p.json
blink/src/: avr.rs  main.rs  prelude.rs  timer0.rs  timer1.rs
libcore/: Cargo.toml
src/: main.rs
