[package]
name = "blink"
version = "0.1.0"
authors = ["Jake Goulding <jake.goulding@gmail.com>"]
edition = "2018"

[profile.release]
debug = true
lto = true
opt-level = "z"

# [dependencies.embrio-executor]
# path = "./embrio-rs/embrio-executor"

# [dependencies.embrio-async]
# path = "./embrio-rs/embrio-async"

[dependencies.ruduino]
path = "./ruduino"
